# COP3503_Term_Project

./: .cproject  .project  Bakery.h  CMakeLists.txt  COP3503_TP.cpp  Cashier.cpp  Cashier.h  Cosmetics.h  Dairy.h  Dairy.txt  Dairy_Eggs.h  Deli.h  Drinks.h  FOOD.txt  FrozenFoods.h  Grains.h  Grains.txt  HomeGoods.h  HotFoods.h  Hygiene.h  Items.h  Meats.h  Pharmacy.h  Produce.h  README.md  Snacks.h  Starship.h  Store.h  dairy.h  dairy.txt  grains.h  grains.txt
