cmake_minimum_required(VERSION 3.9)
project(COP3503_Term_Project)

set(CMAKE_CXX_STANDARD 11)

add_executable(COP3503_Term_Project
        Bakery.h
        COP3503_TP.cpp
        Cosmetics.h
        dairy.h
        Deli.h
        Drinks.h
        FOOD.txt
        FrozenFoods.h
        grains.h
        HomeGoods.h
        HotFoods.h
        Hygiene.h
        Meats.h
        Pharmacy.h
        Produce.h
        Snacks.h
        Store.h)
